# resumepro

./: .env.example  README.md  SETUP_GUIDE.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
cs16-ai-bot/: .gitignore  README.md  config.yaml
cs16-ai-bot/docker/: Dockerfile.hlds  Dockerfile.neurbot  docker-compose.yml
cs16-ai-bot/docker/configs/: game.cfg  server.cfg
cs16-ai-bot/plugin/: CMakeLists.txt
cs16-ai-bot/plugin/include/: action_executor.h  bot_manager.h  ipc_bridge.h  navigation.h  neurbot_plugin.h  perception.h  protocol.h
cs16-ai-bot/plugin/src/: action_executor.cpp  bot_manager.cpp  ipc_bridge.cpp  navigation.cpp  neurbot_plugin.cpp  perception.cpp
cs16-ai-bot/python/: pyproject.toml
cs16-ai-bot/python/neurbot/: __init__.py  engine.py
cs16-ai-bot/python/neurbot/data/: __init__.py  dataset.py  demo_parser.py
cs16-ai-bot/python/neurbot/humanize/: __init__.py  humanizer.py
cs16-ai-bot/python/neurbot/ipc/: __init__.py  protocol.py  shared_memory.py
cs16-ai-bot/python/neurbot/models/: __init__.py  strategic.py  tactical.py
cs16-ai-bot/python/neurbot/training/: __init__.py  train_rl.py  train_tactical.py
cs16-ai-bot/python/tests/: test_dataset.py  test_humanizer.py  test_models.py  test_protocol.py
cs16-ai-bot/scripts/: collect_demos.py  quick_train.py
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/(admin)/admin/: page.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/signup/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/analysis/: page.tsx
src/app/(dashboard)/billing/: page.tsx
src/app/(dashboard)/cover-letter/: page.tsx
src/app/(dashboard)/dashboard/: page.tsx
src/app/(dashboard)/linkedin/: page.tsx
src/app/(dashboard)/onboarding/: page.tsx
src/app/api/analyze/: route.ts
src/app/contact/: page.tsx
src/app/pricing/: page.tsx
src/app/privacy-policy/: page.tsx
src/app/terms-of-service/: page.tsx
src/components/: mode-toggle.tsx
src/components/landing/: cta-section.tsx  faq-section.tsx  features-section.tsx  footer.tsx  hero-section.tsx  how-it-works.tsx  navigation.tsx  pricing-section.tsx  testimonials-section.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  progress.tsx  tabs.tsx  toast.tsx
src/hooks/: use-demo.tsx
src/lib/: create-supabase.ts  demo.ts  utils.ts
src/supabase/: client.ts
src/types/: index.ts
supabase/: schema.sql
(+7 files in other folders)
